--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "Modernized Tiddly Drive 2 Google Drive app integration",
   "scripts": {
-    "build": "node scripts/build.mjs",
+    "build": "node scripts/build.mjs && cd ./info-site && pnpm run build",
     "dev:app": "node scripts/build.mjs --watch",
     "dev:site": "pnpm --dir info-site dev",
     "dev:all": "concurrently -n app,site -c cyan,magenta \"pnpm dev:app\" \"pnpm dev:site\"",
@@ -12,7 +12,8 @@
     "icons:clean": "rm -rf app/branding/png && mkdir -p app/branding/png",
     "icons:single": "rsvg-convert -w $WIDTH -h $WIDTH app/branding/logo-icon.svg > app/branding/png/icon-$WIDTH.png",
     "icons:full": "rsvg-convert -w 1024 app/branding/logo-full.svg > app/branding/png/logo-full-1024.png && rsvg-convert -w 1024 app/branding/logo-full-inverted.svg > app/branding/png/logo-full-inverted-1024.png",
-    "icons:all": "pnpm run icons:clean && for s in 32 48 64 120 128 256 512; do WIDTH=$s pnpm run -s icons:single; done && pnpm run -s icons:full",
+    "icons:ico": "convert app/branding/png/icon-16.png app/branding/png/icon-32.png app/branding/png/icon-48.png app/branding/png/icon-64.png app/branding/png/icon-128.png app/branding/png/icon-256.png app/branding/png/favicon.ico",
+    "icons:all": "pnpm run icons:clean && for s in 16 32 48 64 120 128 256 512; do WIDTH=$s pnpm run -s icons:single; done && pnpm run -s icons:full && pnpm run -s icons:ico",
     "assets": "pnpm run build && pnpm run icons:all"
   },
   "devDependencies": {
