--- a/info-site/package.json
+++ b/info-site/package.json
@@ -11,6 +11,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@aneuhold/eslint-config": "^1.3.3",
     "@sveltejs/adapter-static": "^3.0.9",
     "@sveltejs/enhanced-img": "^0.8.1",
     "@sveltejs/kit": "^2.37.0",
@@ -19,6 +20,7 @@
     "@types/node": "^22.7.4",
     "eslint": "^9.34.0",
     "prettier": "^3.6.2",
+    "prettier-plugin-svelte": "^3.4.0",
     "svelte": "^5.38.6",
     "typescript": "^5.9.2",
     "vite": "^7.1.4",
