--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tiddly-drive-2-app",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
   "description": "Modernized Tiddly Drive 2 Google Drive app integration",
   "scripts": {
     "build": "node scripts/build.mjs && cd ./info-site && pnpm run build",
@@ -17,6 +18,7 @@
     "assets": "pnpm run build && pnpm run icons:all"
   },
   "devDependencies": {
+    "@aneuhold/eslint-config": "^1.3.3",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "esbuild": "^0.21.5"
