--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,4 +1,4 @@
-name: 'Pull Request Actions'
+name: "Pull Request Actions"
 
 on:
   pull_request:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   testAndDeploy:
-    name: 'Test and Deploy'
+    name: "Test and Deploy"
     runs-on: ubuntu-latest
 
     steps:
@@ -20,30 +20,30 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 'lts/*'
-          cache: 'pnpm'
+          node-version: "lts/*"
+          cache: "pnpm"
           cache-dependency-path: |
             pnpm-lock.yaml
-            svelte/pnpm-lock.yaml
+            app/pnpm-lock.yaml
 
       - name: Install dependencies (root, svelte)
         run: pnpm run i
 
       - name: Build the svelte site
-        run: pnpm svelte:build
+        run: pnpm build
 
       - name: Deploy to Netlify
         uses: nwtgck/actions-netlify@v2.1
         with:
-          publish-dir: './svelte/build'
+          publish-dir: "./app/build"
           production-branch: main
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: '${{ github.event.pull_request.title }} Deploy Preview'
+          deploy-message: "${{ github.event.pull_request.title }} Deploy Preview"
           enable-pull-request-comment: true
           enable-commit-comment: false
           overwrites-pull-request-comment: true
-          github-deployment-description: 'Netlify Deploy Preview (Svelte)'
+          github-deployment-description: "Netlify Deploy Preview"
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SVELTE_SITE_ID }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         timeout-minutes: 1
