--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "GNU",
   "description": "Modernized Tiddly Drive 2 Google Drive app integration",
   "scripts": {
+    "i": "pnpm install && cd ./app && pnpm install",
     "build": "cd ./app && pnpm run build",
     "dev": "pnpm --dir app dev",
     "icons:clean": "rm -rf branding/png && mkdir -p branding/png",
