--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "license": "GNU",
+  "packageManager": "pnpm@10.14.0",
   "description": "Modernized Tiddly Drive 2 Google Drive app integration",
   "scripts": {
     "i": "pnpm install && cd ./app && pnpm install",
