Update package name

--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiddly-drive-info-site",
+  "name": "tiddly-drive-app",
   "version": "0.1.0",
   "private": true,
   "type": "module",
