--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "i": "pnpm install && cd ./app && pnpm install",
     "build": "cd ./app && pnpm run build",
     "dev": "pnpm --dir app dev",
+    "preview": "cd ./app && pnpm run preview",
     "icons:clean": "rm -rf branding/png && mkdir -p branding/png",
     "icons:single": "rsvg-convert -w $WIDTH -h $WIDTH branding/logo-icon.svg > branding/png/icon-$WIDTH.png",
     "icons:full": "rsvg-convert -w 1024 branding/logo-full.svg > branding/png/logo-full-1024-transparent.png && rsvg-convert -w 1024 branding/logo-full-inverted.svg > branding/png/logo-full-inverted-1024-transparent.png && rsvg-convert -w 1024 -b white branding/logo-full.svg > branding/png/logo-full-1024-white.png && rsvg-convert -w 1024 -b black branding/logo-full-inverted.svg > branding/png/logo-full-inverted-1024-black.png && rsvg-convert -w 220 -h 140 -b white branding/logo-full-trimmed.svg > branding/png/logo-full-220x140-white.png && rsvg-convert -w 220 -h 140 -b black branding/logo-full-trimmed-inverted.svg > branding/png/logo-full-220x140-black.png",
