Fix up authentication

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,12 @@
 # Google OAuth Client ID (Web) from Google Cloud Console
 GOOGLE_CLIENT_ID=477983451498-28pnsm6sgqfm5l2gk0pris227couk477.apps.googleusercontent.com
 
+# Google OAuth Client Secret from Google Cloud Console
+GOOGLE_CLIENT_SECRET=YOUR_CLIENT_SECRET
+
 # Public callback URL for your Netlify Dev server
-# For Netlify Dev default port, this should be:
-OAUTH_REDIRECT_URI=http://localhost:8888/.netlify/functions/oauth-callback
+# In prod, this should be: https://tiddlydrive.tonyneuhold.com/.netlify/functions/oauth-callback
+OAUTH_REDIRECT_URI=http://localhost:4317/.netlify/functions/oauth-callback
 
 # Base64url-encoded 32-byte key used to encrypt the refresh token cookie
 # Generate with: openssl rand -base64 32 | tr '+/' '-_' | tr -d '='
