--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   },
   "devDependencies": {
     "@aneuhold/eslint-config": "^1.3.3",
+    "@netlify/functions": "^2.6.0",
+    "@types/node": "^22.7.4",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "esbuild": "^0.21.5",
-    "netlify-cli": "^23.6.0"
+    "eslint": "^9.36.0",
+    "netlify-cli": "^23.6.0",
+    "prettier": "^3.6.2",
+    "typescript": "^5.9.2"
   }
 }
