--- a/.github/workflows/main-branch.yml
+++ b/.github/workflows/main-branch.yml
@@ -32,21 +32,10 @@ jobs:
       - name: Build the svelte site
         run: pnpm build
 
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v3.0
-        with:
-          publish-dir: './app/build'
-          functions-dir: './backend/functions'
-          production-branch: main
-          production-deploy: true
-          netlify-config-path: './netlify.toml'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: 'Main Branch Deploy'
-          enable-pull-request-comment: false
-          enable-commit-comment: false
-          overwrites-pull-request-comment: false
-          github-deployment-description: 'Netlify Deploy'
+      - name: Deploy to Netlify (CLI)
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 1
+        run: |
+          pnpm exec netlify deploy --build --prod --message "Main Branch Deploy" --filter ""
+        timeout-minutes: 2
