--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,21 +32,10 @@ jobs:
       - name: Build the svelte site
         run: pnpm build
 
-      # Still specify the functions-dir and publish-dir, because we are building from source here.
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v3.0
-        with:
-          publish-dir: './app/build'
-          functions-dir: './backend/functions'
-          production-branch: main
-          netlify-config-path: './netlify.toml'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: '${{ github.event.pull_request.title }} Deploy Preview'
-          enable-pull-request-comment: false
-          enable-commit-comment: false
-          overwrites-pull-request-comment: false
-          github-deployment-description: 'Netlify Deploy Preview'
+      - name: Deploy to Netlify (CLI Preview)
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 1
+        run: |
+          pnpm exec netlify deploy --build --message "${{ github.event.pull_request.title }} Deploy Preview" --filter ""
+        timeout-minutes: 2
