--- a/.github/workflows/main-branch.yml
+++ b/.github/workflows/main-branch.yml
@@ -1,4 +1,4 @@
-name: "Main Branch Actions"
+name: 'Main Branch Actions'
 
 on:
   push:
@@ -8,8 +8,16 @@ on:
 
 jobs:
   deploy:
-    name: "Deploy"
+    name: 'Deploy'
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      deployments: write
+    env:
+      GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+      GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
+      OAUTH_REDIRECT_URI: ${{ secrets.OAUTH_REDIRECT_URI }}
+      TD2_ENC_KEY_B64: ${{ secrets.TD2_ENC_KEY_B64 }}
 
     steps:
       - uses: actions/checkout@v4
@@ -20,8 +28,8 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
-          cache: "pnpm"
+          node-version: 'lts/*'
+          cache: 'pnpm'
           cache-dependency-path: |
             pnpm-lock.yaml
             app/pnpm-lock.yaml
@@ -29,22 +37,86 @@ jobs:
       - name: Install dependencies
         run: pnpm run i
 
-      - name: Build the svelte site
-        run: pnpm build
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Deploy to Netlify
-        uses: nwtgck/actions-netlify@v3.0
-        with:
-          publish-dir: "./app/build"
-          production-branch: main
-          production-deploy: true
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          deploy-message: "Main Branch Deploy"
-          enable-pull-request-comment: false
-          enable-commit-comment: false
-          overwrites-pull-request-comment: false
-          github-deployment-description: "Netlify Deploy"
+      - name: Sync Netlify environment variables
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        timeout-minutes: 1
+        run: |
+          set -euo pipefail
+          pnpm exec netlify env:set GOOGLE_CLIENT_ID       "$GOOGLE_CLIENT_ID"       --json >/dev/null
+          pnpm exec netlify env:set GOOGLE_CLIENT_SECRET   "$GOOGLE_CLIENT_SECRET"   --json >/dev/null
+          pnpm exec netlify env:set OAUTH_REDIRECT_URI     "$OAUTH_REDIRECT_URI"     --json >/dev/null
+          pnpm exec netlify env:set TD2_ENC_KEY_B64        "$TD2_ENC_KEY_B64"        --json >/dev/null
+
+      - name: Deploy to Netlify (CLI)
+        id: deploy
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+        run: |
+          set -euo pipefail
+          JSON_OUTPUT=$(pnpm exec netlify deploy --build --prod --message "Main Branch Deploy" --json)
+          URL=$(echo "$JSON_OUTPUT" | jq -r '.url // .deploy_url // empty')
+          if [ -n "$URL" ]; then
+            echo "url=$URL" >> $GITHUB_OUTPUT
+            echo "Netlify Production URL: $URL" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "Netlify deploy completed but no URL found in JSON output:" >> $GITHUB_STEP_SUMMARY
+            echo "$JSON_OUTPUT" >> $GITHUB_STEP_SUMMARY
+          fi
+        timeout-minutes: 15
+
+      - name: Create GitHub Deployment (start)
+        id: gh_deploy
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const res = await github.rest.repos.createDeployment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: context.sha,
+              environment: 'Production',
+              description: 'Netlify Production Deploy',
+              auto_merge: false,
+              required_contexts: [],
+              transient_environment: false,
+              production_environment: true,
+            });
+            core.setOutput('deployment_id', res.data.id);
+
+      - name: Set Deployment Status (success)
+        if: ${{ success() }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.repos.createDeploymentStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              deployment_id: Number(process.env.DEPLOYMENT_ID),
+              state: 'success',
+              environment_url: process.env.DEPLOY_URL,
+              log_url: `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`,
+              auto_inactive: true,
+            });
+        env:
+          DEPLOYMENT_ID: ${{ steps.gh_deploy.outputs.deployment_id }}
+          DEPLOY_URL: ${{ steps.deploy.outputs.url }}
+
+      - name: Set Deployment Status (failure)
+        if: ${{ failure() }}
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.repos.createDeploymentStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              deployment_id: Number(process.env.DEPLOYMENT_ID),
+              state: 'error',
+              log_url: `https://github.com/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}`,
+              auto_inactive: true,
+            });
+        env:
+          DEPLOYMENT_ID: ${{ steps.gh_deploy.outputs.deployment_id }}
