--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "@sveltejs/kit": "^2.37.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.3",
     "@testing-library/svelte": "^5.2.8",
+    "@types/gapi": "^0.0.47",
     "@types/node": "^22.7.4",
     "eslint": "^9.34.0",
     "prettier": "^3.6.2",
